--- a/startpage/index.html
+++ b/startpage/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css" />
-    <title>home</title>
+    <title>Toni's start page</title>
 </head>
 
 
@@ -19,7 +19,8 @@
         <div class=items>
             <p class="lst">
                 <span style="color: var(--color1)">[<a href="https://tonisagrista.com/">homepage</a>]</span>
-                <span style="color: var(--color2)">[<a href="https://mailbox.org/">mail</a>]</span>
+                <span style="color: var(--color2)">[<a href="https://toni.sagrista.info/">homepage-alt</a>]</span>
+                <span style="color: var(--color3)">[<a href="https://mailbox.org/">mail</a>]</span>
             </p>
             <p class="lst">
                 <span style="color: var(--color1)">[<a href="https://gitlab.com/langurmonkey">gitlab</a>]</span>
@@ -36,6 +37,13 @@
             </p>
             <p class="lst">
                 <span style="color: var(--color1)">[<a href="https://reddit.com/">reddit</a>]</span>
+                <span style="color: var(--color2)">[<a href="https://reddit.com/user/toninoni/m/gloriouslinux">linux</a>]</span>
+                <span style="color: var(--color3)">[<a href="https://reddit.com/user/toninoni/m/football">football</a>]</span>
+                <span style="color: var(--color4)">[<a href="https://reddit.com/user/toninoni/m/technology">tech</a>]</span>
+                <span style="color: var(--color5)">[<a href="https://reddit.com/user/toninoni/m/gaming">gaming</a>]</span>
+                <span style="color: var(--color6)">[<a href="https://reddit.com/user/toninoni/m/science">science</a>]</span>
+            </p>
+                <p class="lst">
                 <span style="color: var(--color2)">[<a href="https://tweetdeck.com/">td</a>]</span>
                 <span style="color: var(--color3)">[<a href="https://mastodont.cat/">md</a>]</span>
                 <span style="color: var(--color4)">[<a href="https://invidio.us/">invidious</a>]</span>
