--- a/startpage/index.html
+++ b/startpage/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <link rel="stylesheet" href="style.css" />
-    <title>Toni's start page</title>
-</head>
+    <head>
+        <link rel="stylesheet" href="style.css" />
+        <title>Toni's start page</title>
+    </head>
 
 
-<body>
-</body>
+    <body>
+    </body>
     <div class=box>
         <div class=categories>
             <p class="cat">personal</p>
@@ -18,37 +18,41 @@
         </div>
         <div class=items>
             <p class="lst">
-                <span style="color: var(--color1)">[<a href="https://tonisagrista.com/">homepage</a>]</span>
-                <span style="color: var(--color2)">[<a href="https://toni.sagrista.info/">homepage-alt</a>]</span>
-                <span style="color: var(--color3)">[<a href="https://mailbox.org/">mail</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://tonisagrista.com/">homepage</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://toni.sagrista.info/">homepage-alt</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://mailbox.org/">mail</a>]</span>
             </p>
             <p class="lst">
-                <span style="color: var(--color1)">[<a href="https://gitlab.com/langurmonkey">gitlab</a>]</span>
-                <span style="color: var(--color2)">[<a href="https://github.com/langurmonkey">github</a>]</span>
-                <span style="color: var(--color3)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://gitlab.com/langurmonkey">gitlab</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://github.com/langurmonkey">github</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
             </p>
             <p class="lst">
-                <span style="color: var(--color1)">[<a href="https://www.zah.uni-heidelberg.de/institutes/ari/gaia/outreach/gaiasky/">gaiasky</a>]</span>
-                <span style="color: var(--color2)">[<a href="https://gitlab.com/langurmonkey/gaiasky/">gs-gitlab</a>]</span>
-                <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs/html/latest">gs-docs</a>]</span>
-                <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
-                <span style="color: var(--color5)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac/">wiki</a>]</span>
-                <span style="color: var(--color6)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://www.zah.uni-heidelberg.de/institutes/ari/gaia/outreach/gaiasky/">gaiasky</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://gitlab.com/langurmonkey/gaiasky/">gs-gitlab</a>]</span>
+            <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs/html/latest">gs-docs</a>]</span>
+            <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac/">wiki</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
             </p>
             <p class="lst">
-                <span style="color: var(--color1)">[<a href="https://reddit.com/">reddit</a>]</span>
-                <span style="color: var(--color2)">[<a href="https://reddit.com/user/toninoni/m/gloriouslinux">linux</a>]</span>
-                <span style="color: var(--color3)">[<a href="https://reddit.com/user/toninoni/m/football">football</a>]</span>
-                <span style="color: var(--color4)">[<a href="https://reddit.com/user/toninoni/m/technology">tech</a>]</span>
-                <span style="color: var(--color5)">[<a href="https://reddit.com/user/toninoni/m/gaming">gaming</a>]</span>
-                <span style="color: var(--color6)">[<a href="https://reddit.com/user/toninoni/m/science">science</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://reddit.com/">reddit</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://reddit.com/user/toninoni/m/gloriouslinux">linux</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://reddit.com/user/toninoni/m/football">football</a>]</span>
+            <span style="color: var(--color4)">[<a href="https://reddit.com/user/toninoni/m/technology">tech</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://reddit.com/user/toninoni/m/gaming">gaming</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://reddit.com/user/toninoni/m/science">science</a>]</span>
             </p>
-                <p class="lst">
-                <span style="color: var(--color2)">[<a href="https://tweetdeck.com/">td</a>]</span>
-                <span style="color: var(--color3)">[<a href="https://mastodont.cat/">md</a>]</span>
-                <span style="color: var(--color4)">[<a href="https://invidio.us/">invidious</a>]</span>
-                <span style="color: var(--color5)">[<a href="http://www.footybite.com/football/">footybite</a>]</span>
-                
+            <p class="lst">
+            <span style="color: var(--color2)">[<a href="https://tweetdeck.com/">td</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://mastodont.cat/">md</a>]</span>
+            <span style="color: var(--color5)">[<a href="http://www.footybite.com/football/">footybite</a>]</span>
+            </p>
+            <p class="lst">
+            <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://netflix.com/">netflix</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://invidio.us/">invidious</a>]</span>
             </p>
         </div>
     </div>
