Add banking to startpage, remove unintended bookmarks

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -14,7 +14,9 @@
             <p class="cat">personal</p>
             <p class="cat">dev</p>
             <p class="cat">work</p>
-            <p class="cat">procastinate</p>
+            <p class="cat">procrastinate</p>
+            <br/>
+            <p class="cat">banking</p>
         </div>
         <div class=items>
             <p class="lst">
@@ -42,17 +44,19 @@
             <span style="color: var(--color4)">[<a href="https://reddit.com/user/toninoni/m/technology">tech</a>]</span>
             <span style="color: var(--color5)">[<a href="https://reddit.com/user/toninoni/m/gaming">gaming</a>]</span>
             <span style="color: var(--color6)">[<a href="https://reddit.com/user/toninoni/m/science">science</a>]</span>
-            </p>
-            <p class="lst">
+            <br/>
             <span style="color: var(--color2)">[<a href="https://tweetdeck.com/">td</a>]</span>
             <span style="color: var(--color3)">[<a href="https://mastodont.cat/">md</a>]</span>
             <span style="color: var(--color5)">[<a href="http://www.footybite.com/football/">footybite</a>]</span>
-            </p>
-            <p class="lst">
+            <br/>
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
-            <span style="color: var(--color6)">[<a href="https://netflix.com/">netflix</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://netflix.com/">netflix</a>]</span>
             <span style="color: var(--color2)">[<a href="https://invidio.us/">invidious</a>]</span>
+            </p>
+            <p class="lst">
+            <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/banking-private/">volksbank</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://app.n26.com/login">n26</a>]</span>
             </p>
         </div>
     </div>
