fix: hb voba link

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -55,7 +55,7 @@
             <span style="color: var(--color2)">[<a href="https://invidio.us/">invidious</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/banking-private/">volksbank</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/banking-private/entry">volksbank</a>]</span>
             <span style="color: var(--color1)">[<a href="https://app.n26.com/login">n26</a>]</span>
             </p>
         </div>
