fix: invidious to yewtube in startpage

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -52,7 +52,7 @@
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
             <span style="color: var(--color1)">[<a href="https://netflix.com/">netflix</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://invidio.us/">invidious</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://yewtu.be/">invidious</a>]</span>
             </p>
             <p class="lst">
             <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/banking-private/entry">volksbank</a>]</span>
