feat: fix start page link

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -30,7 +30,7 @@
             <span style="color: var(--color10)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color1)">[<a href="https://www.zah.uni-heidelberg.de/institutes/ari/gaia/outreach/gaiasky/">gaiasky</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/ari/gaia/outreach/gaiasky/">gaiasky</a>]</span>
             <span style="color: var(--color2)">[<a href="https://gitlab.com/langurmonkey/gaiasky/">gs-gitlab</a>]</span>
             <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs/html/latest">gs-docs</a>]</span>
             <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
@@ -53,6 +53,7 @@
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
             <span style="color: var(--color1)">[<a href="https://netflix.com/">netflix</a>]</span>
             <span style="color: var(--color2)">[<a href="https://yewtu.be/">invidious</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://odysee.com/">lbry</a>]</span>
             </p>
             <p class="lst">
             <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/banking-private/entry">volksbank</a>]</span>
