fix: startpage gs link

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -30,7 +30,7 @@
             <span style="color: var(--color10)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/ari/gaia/outreach/gaiasky/">gaiasky</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky/">gaiasky</a>]</span>
             <span style="color: var(--color2)">[<a href="https://gitlab.com/langurmonkey/gaiasky/">gs-gitlab</a>]</span>
             <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs/html/latest">gs-docs</a>]</span>
             <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
@@ -46,7 +46,8 @@
             <span style="color: var(--color10)">[<a href="https://reddit.com/user/toninoni/m/science">science</a>]</span>
             <br/>
             <span style="color: var(--color11)">[<a href="https://tweetdeck.com/">td</a>]</span>
-            <span style="color: var(--color12)">[<a href="https://mastodont.cat/">md</a>]</span>
+            <span style="color: var(--color12)">[<a href="https://mastodont.cat/">mdt</a>]</span>
+            <span style="color: var(--color12)">[<a href="https://mastodon.social/">md</a>]</span>
             <span style="color: var(--color13)">[<a href="http://www.footybite.com/football/">footybite</a>]</span>
             <br/>
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
