--- a/startpage/index.html
+++ b/startpage/index.html
@@ -21,7 +21,7 @@
         <div class=items>
             <p class="lst">
             <span style="color: var(--color1)">[<a href="https://tonisagrista.com/">homepage</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://toni.sagrista.info/">homepage-alt</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://sagrista.info/">homepage-alt</a>]</span>
             <span style="color: var(--color3)">[<a href="https://mailbox.org/">mail</a>]</span>
             </p>
             <p class="lst">
