feat: update links in index.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -38,17 +38,17 @@
             <span style="color: var(--color15)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color5)">[<a href="https://reddit.com/">reddit</a>]</span>
-            <span style="color: var(--color6)">[<a href="https://reddit.com/user/toninoni/m/linux">linux</a>]</span>
-            <span style="color: var(--color7)">[<a href="https://reddit.com/user/toninoni/m/football">football</a>]</span>
-            <span style="color: var(--color8)">[<a href="https://reddit.com/user/toninoni/m/technology">tech</a>]</span>
-            <span style="color: var(--color9)">[<a href="https://reddit.com/user/toninoni/m/gaming">gaming</a>]</span>
-            <span style="color: var(--color10)">[<a href="https://reddit.com/user/toninoni/m/science">science</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://troddit.com/">reddit</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://www.troddit.com/r/terminal_porn+linux_gaming+linuxquestions+i3wm+Sway+gnome+wayland+SurfaceLinux+linux4noobs+archlinux+linux+ipfs+budgie+swaywm+bash+virtualreality_linux+Ubuntu+bspwm+qutebrowser+debian+linuxmasterrace+unixporn+zsh?m=linux">libreddit</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://www.troddit.com/r/terminal_porn+linux_gaming+linuxquestions+i3wm+Sway+gnome+wayland+SurfaceLinux+linux4noobs+archlinux+linux+ipfs+budgie+swaywm+bash+virtualreality_linux+Ubuntu+bspwm+qutebrowser+debian+linuxmasterrace+unixporn+zsh?m=linux">linux</a>]</span>
+            <span style="color: var(--color7)">[<a href="https://www.troddit.com/r/soccer+footballdownload+footballhighlights+Barca?m=football">football</a>]</span>
+            <span style="color: var(--color8)">[<a href="https://www.troddit.com/r/ancientegypt+history+WorldHistory+Antiques+MedievalHistory+fossilid+ImaginaryHistory+Archeology+Dinosaurs+HistoryPorn+ancientrome?m=history">history</a>]</span>
+            <span style="color: var(--color10)">[<a href="https://www.troddit.com/r/photography+DarkTable+photo+FOSSPhotography+canon+eosr+fujifilm+CameraTrickery+PhotoGearReviews+Cameras+fujix?m=photo">photo</a>]</span>
             <br/>
             <span style="color: var(--color11)">[<a href="https://tweetdeck.com/">td</a>]</span>
             <span style="color: var(--color12)">[<a href="https://mastodont.cat/">mdt</a>]</span>
             <span style="color: var(--color12)">[<a href="https://mastodon.social/">md</a>]</span>
-            <span style="color: var(--color13)">[<a href="http://www.footybite.com/football/">footybite</a>]</span>
+            <span style="color: var(--color13)">[<a href="https://reddiit.soccerstreams.net">soccerstreams</a>]</span>
             <br/>
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
