fix: update gaiasky repo URL in startpage.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -31,7 +31,7 @@
             </p>
             <p class="lst">
             <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky/">gaiasky</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://gitlab.com/langurmonkey/gaiasky/">gs-gitlab</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://codeberg.org/gaiasky/gaiasky/">gaiasky-repo</a>]</span>
             <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs/html/latest">gs-docs</a>]</span>
             <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
             <span style="color: var(--color14)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac/">wiki</a>]</span>
