--- a/startpage/index.html
+++ b/startpage/index.html
@@ -38,9 +38,8 @@
             <span style="color: var(--color15)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color5)">[<a href="https://troddit.com/">reddit</a>]</span>
-            <span style="color: var(--color6)">[<a href="https://www.troddit.com/r/terminal_porn+linux_gaming+linuxquestions+i3wm+Sway+gnome+wayland+SurfaceLinux+linux4noobs+archlinux+linux+ipfs+budgie+swaywm+bash+virtualreality_linux+Ubuntu+bspwm+qutebrowser+debian+linuxmasterrace+unixporn+zsh?m=linux">libreddit</a>]</span>
-            <span style="color: var(--color1)">[<a href="https://www.troddit.com/r/terminal_porn+linux_gaming+linuxquestions+i3wm+Sway+gnome+wayland+SurfaceLinux+linux4noobs+archlinux+linux+ipfs+budgie+swaywm+bash+virtualreality_linux+Ubuntu+bspwm+qutebrowser+debian+linuxmasterrace+unixporn+zsh?m=linux">linux</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://troddit.com/">troddit</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://www.troddit.com/r/terminal_porn+linux_gaming+linuxquestions+i3wm+Sway+gnome+wayland+SurfaceLinux+linux4noobs+archlinux+linux+ipfs+budgie+swaywm+bash+virtualreality_linux+Ubuntu+bspwm+qutebrowser+debian+linuxmasterrace+unixporn+zsh?m=linux">linux</a>]</span>
             <span style="color: var(--color7)">[<a href="https://www.troddit.com/r/soccer+footballdownload+footballhighlights+Barca?m=football">football</a>]</span>
             <span style="color: var(--color8)">[<a href="https://www.troddit.com/r/ancientegypt+history+WorldHistory+Antiques+MedievalHistory+fossilid+ImaginaryHistory+Archeology+Dinosaurs+HistoryPorn+ancientrome?m=history">history</a>]</span>
             <span style="color: var(--color10)">[<a href="https://www.troddit.com/r/photography+DarkTable+photo+FOSSPhotography+canon+eosr+fujifilm+CameraTrickery+PhotoGearReviews+Cameras+fujix?m=photo">photo</a>]</span>
