--- a/startpage/index.html
+++ b/startpage/index.html
@@ -32,7 +32,7 @@
             <p class="lst">
             <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky/">gaiasky</a>]</span>
             <span style="color: var(--color2)">[<a href="https://codeberg.org/gaiasky/gaiasky/">gaiasky-repo</a>]</span>
-            <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs/html/latest">gs-docs</a>]</span>
+            <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs">gs-docs</a>]</span>
             <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
             <span style="color: var(--color14)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac/">wiki</a>]</span>
             <span style="color: var(--color15)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
@@ -45,18 +45,18 @@
             <span style="color: var(--color10)">[<a href="https://www.troddit.com/r/photography+DarkTable+photo+FOSSPhotography+canon+eosr+fujifilm+CameraTrickery+PhotoGearReviews+Cameras+fujix?m=photo">photo</a>]</span>
             <br/>
             <span style="color: var(--color11)">[<a href="https://tweetdeck.com/">td</a>]</span>
-            <span style="color: var(--color12)">[<a href="https://mastodont.cat/">mdt</a>]</span>
             <span style="color: var(--color12)">[<a href="https://mastodon.social/">md</a>]</span>
+            <span style="color: var(--color12)">[<a href="https://mastodont.cat/">mdt</a>]</span>
             <span style="color: var(--color13)">[<a href="https://reddiit.soccerstreams.net">soccerstreams</a>]</span>
             <br/>
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
-            <span style="color: var(--color1)">[<a href="https://netflix.com/">netflix</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://tilvids.com/">tilvids</a>]</span>
             <span style="color: var(--color2)">[<a href="https://yewtu.be/">invidious</a>]</span>
-            <span style="color: var(--color3)">[<a href="https://odysee.com/">lbry</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://odysee.com/">odysee</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/banking-private/entry">volksbank</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/services_cloud/portal">volksbank</a>]</span>
             <span style="color: var(--color1)">[<a href="https://app.n26.com/login">n26</a>]</span>
             </p>
         </div>
