fix: footybite link.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -47,7 +47,7 @@
             <span style="color: var(--color11)">[<a href="https://tweetdeck.com/">td</a>]</span>
             <span style="color: var(--color12)">[<a href="https://mastodon.social/">md</a>]</span>
             <span style="color: var(--color12)">[<a href="https://mastodont.cat/">mdt</a>]</span>
-            <span style="color: var(--color13)">[<a href="https://streams.footybite.com">footybite</a>]</span>
+            <span style="color: var(--color13)">[<a href="https://footybite.to">footybite</a>]</span>
             <br/>
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
