fix: codeberg link in startpage.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -25,7 +25,7 @@
             <span style="color: var(--color3)">[<a href="https://mailbox.org/">mail</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color6)">[<a href="https://codeberg.org/langurmonkey">codeberg</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://www.codeberg.org/langurmonkey">codeberg</a>]</span>
             <span style="color: var(--color8)">[<a href="https://gitlab.com/langurmonkey">gitlab</a>]</span>
             <span style="color: var(--color10)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
             </p>
