none: useless change.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -20,9 +20,9 @@
         </div>
         <div class=items>
             <p class="lst">
-            <span style="color: var(--color1)">[<a href="https://tonisagrista.com/">homepage</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://sagrista.info/">homepage-alt</a>]</span>
-            <span style="color: var(--color3)">[<a href="https://mailbox.org/">mail</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://tonisagrista.com">homepage</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://sagrista.info">homepage-alt</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://mailbox.org">mail</a>]</span>
             </p>
             <p class="lst">
             <span style="color: var(--color6)">[<a href="https://www.codeberg.org/langurmonkey">codeberg</a>]</span>
@@ -30,30 +30,30 @@
             <span style="color: var(--color10)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky/">gaiasky</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://codeberg.org/gaiasky/gaiasky/">gaiasky-repo</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky">gaiasky</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://codeberg.org/gaiasky/gaiasky">gaiasky-repo</a>]</span>
             <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs">gs-docs</a>]</span>
             <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
-            <span style="color: var(--color14)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac/">wiki</a>]</span>
+            <span style="color: var(--color14)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac">wiki</a>]</span>
             <span style="color: var(--color15)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color5)">[<a href="https://lemmy.ml/">lemmy</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://lemmy.ml">lemmy</a>]</span>
             <span style="color: var(--color6)">[<a href="https://lemmy.ml/c/linux">linux</a>]</span>
             <span style="color: var(--color7)">[<a href="https://lemmy.ml/c/soccer">football</a>]</span>
             <span style="color: var(--color8)">[<a href="https://lemmy.ml/c/history">history</a>]</span>
             <span style="color: var(--color10)">[<a href="https://lemmy.ml/c/photography">photo</a>]</span>
             <br/>
-            <span style="color: var(--color11)">[<a href="https://tweetdeck.com/">td</a>]</span>
-            <span style="color: var(--color12)">[<a href="https://mastodon.social/">md</a>]</span>
-            <span style="color: var(--color12)">[<a href="https://mastodont.cat/">mdt</a>]</span>
+            <span style="color: var(--color11)">[<a href="https://tweetdeck.com">td</a>]</span>
+            <span style="color: var(--color12)">[<a href="https://mastodon.social">md</a>]</span>
+            <span style="color: var(--color12)">[<a href="https://mastodont.cat">mdt</a>]</span>
             <span style="color: var(--color13)">[<a href="https://footybite.to">footybite</a>]</span>
             <br/>
             <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
             <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
-            <span style="color: var(--color1)">[<a href="https://tilvids.com/">tilvids</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://yewtu.be/">invidious</a>]</span>
-            <span style="color: var(--color3)">[<a href="https://odysee.com/">odysee</a>]</span>
+            <span style="color: var(--color1)">[<a href="https://tilvids.com">tilvids</a>]</span>
+            <span style="color: var(--color2)">[<a href="https://yewtu.be">invidious</a>]</span>
+            <span style="color: var(--color3)">[<a href="https://odysee.com">odysee</a>]</span>
             </p>
             <p class="lst">
             <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/services_cloud/portal">volksbank</a>]</span>
