feat: move links to lemmy.world.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -38,11 +38,11 @@
             <span style="color: var(--color15)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
             </p>
             <p class="lst">
-            <span style="color: var(--color5)">[<a href="https://lemmy.ml">lemmy</a>]</span>
-            <span style="color: var(--color6)">[<a href="https://lemmy.ml/c/linux">linux</a>]</span>
-            <span style="color: var(--color7)">[<a href="https://lemmy.ml/c/soccer">football</a>]</span>
-            <span style="color: var(--color8)">[<a href="https://lemmy.ml/c/history">history</a>]</span>
-            <span style="color: var(--color10)">[<a href="https://lemmy.ml/c/photography">photo</a>]</span>
+            <span style="color: var(--color5)">[<a href="https://lemmy.world">lemmy</a>]</span>
+            <span style="color: var(--color6)">[<a href="https://lemmy.world/c/linux">linux</a>]</span>
+            <span style="color: var(--color7)">[<a href="https://lemmy.world/c/soccer">football</a>]</span>
+            <span style="color: var(--color8)">[<a href="https://lemmy.world/c/history">history</a>]</span>
+            <span style="color: var(--color10)">[<a href="https://lemmy.world/c/photography">photo</a>]</span>
             <br/>
             <span style="color: var(--color11)">[<a href="https://tweetdeck.com">td</a>]</span>
             <span style="color: var(--color12)">[<a href="https://mastodon.social">md</a>]</span>
