--- a/startpage/index.html
+++ b/startpage/index.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&amp;display=swap"
+      rel="stylesheet"
+    />
+    <title>Startpage</title>
+  </head>
 
-    <head>
-        <link rel="stylesheet" href="style.css" />
-        <title>Toni's start page</title>
-    </head>
-
-
-    <body>
-    </body>
-    <div class=box>
-        <div class=categories>
-            <p class="cat">personal</p>
-            <p class="cat">dev</p>
-            <p class="cat">work</p>
-            <p class="cat">procrastinate</p>
-            <br/>
-            <p class="cat">banking</p>
+  <body>
+    <div class="wrapper">
+      <div class="bg"></div>
+      <div class="maincard">
+        <div class="content">
+          <div class="image">
+            <img src="images/gif.gif" alt="No image" />
+          </div>
+          <div id="links" class="links">
+            <section>
+              <h3>Home</h3>
+              <ul>
+                <li><a href="https://tonisagrista.com">Homepage</a></li>
+                <li><a href="https://old.reddit.com">Reddit</a></li>
+                <li><a href="https://mastodon.social">Mastodon</a></li>
+                <li><a href="https://pixelfed.social/i/web">Pixelfed</a></li>
+                <li><a href="https://www.youtube.com/">Youtube</a></li>
+                <li><a href="https://twitter.com">Twitter</a></li>
+              </ul>
+            </section>
+            <section>
+              <h3>Gaia</h3>
+              <ul>
+                <li><a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky">Gaia Sky</a></li>
+                <li><a href="https://codeberg.org/gaiasky/gaiasky">Repo</a></li>
+                <li><a href="https://www.cosmos.esa.int/web/gaia/home">Cosmos</a></li>
+                <li><a href="https://s2e2.cosmos.esa.int/jira/">Jira</a></li>
+                <li><a href="https://wiki.cosmos.esa.int/gaia-dpac">Wiki</a></li>
+                <li><a href="https://gaia.ari.uni-heidelberg.de/gaiasky/docs">Docs</a></li>
+              </ul>
+            </section>
+            <section>
+              <h3>Fun</h3>
+              <ul>
+                <li><a href="https://ccma.cat/3cat">3cat</a></li>
+                <li><a href="https://tilvids.com">Tilvids</a></li>
+                <li><a href="https://yewtu.be">Invidious</a></li>
+                <li><a href="https://openstreetmap.org">OSM</a></li>
+              </ul>
+            </section>
+          </div>
         </div>
-        <div class=items>
-            <p class="lst">
-            <span style="color: var(--color1)">[<a href="https://tonisagrista.com">homepage</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://sagrista.info">homepage-alt</a>]</span>
-            <span style="color: var(--color3)">[<a href="https://mailbox.org">mail</a>]</span>
-            </p>
-            <p class="lst">
-            <span style="color: var(--color6)">[<a href="https://www.codeberg.org/langurmonkey">codeberg</a>]</span>
-            <span style="color: var(--color8)">[<a href="https://gitlab.com/langurmonkey">gitlab</a>]</span>
-            <span style="color: var(--color10)">[<a href="https://vcgitlab.iwr.uni-heidelberg.de">vcgitlab</a>]</span>
-            </p>
-            <p class="lst">
-            <span style="color: var(--color1)">[<a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky">gaiasky</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://codeberg.org/gaiasky/gaiasky">gaiasky-repo</a>]</span>
-            <span style="color: var(--color3)">[<a href="http://gaia.ari.uni-heidelberg.de/gaiasky/docs">gs-docs</a>]</span>
-            <span style="color: var(--color4)">[<a href="https://www.cosmos.esa.int/web/gaia/home">cosmos</a>]</span>
-            <span style="color: var(--color14)">[<a href="https://wiki.cosmos.esa.int/gaia-dpac">wiki</a>]</span>
-            <span style="color: var(--color15)">[<a href="https://issues.cosmos.esa.int/gaia/secure/Dashboard.jspa">jira</a>]</span>
-            </p>
-            <p class="lst">
-            <span style="color: var(--color5)">[<a href="https://lemmy.world">lemmy</a>]</span>
-            <span style="color: var(--color6)">[<a href="https://lemmy.world/c/linux">linux</a>]</span>
-            <span style="color: var(--color7)">[<a href="https://lemmy.world/c/soccer">football</a>]</span>
-            <span style="color: var(--color8)">[<a href="https://lemmy.world/c/history">history</a>]</span>
-            <span style="color: var(--color10)">[<a href="https://lemmy.world/c/photography">photo</a>]</span>
-            <br/>
-            <span style="color: var(--color11)">[<a href="https://tweetdeck.com">td</a>]</span>
-            <span style="color: var(--color12)">[<a href="https://mastodon.social">md</a>]</span>
-            <span style="color: var(--color12)">[<a href="https://mastodont.cat">mdt</a>]</span>
-            <span style="color: var(--color13)">[<a href="https://footybite.to">footybite</a>]</span>
-            <br/>
-            <span style="color: var(--color4)">[<a href="https://ccma.cat/tv3/directe">tv3</a>]</span>
-            <span style="color: var(--color5)">[<a href="https://ccma.cat/catradio">catradio</a>]</span>
-            <span style="color: var(--color1)">[<a href="https://tilvids.com">tilvids</a>]</span>
-            <span style="color: var(--color2)">[<a href="https://yewtu.be">invidious</a>]</span>
-            <span style="color: var(--color3)">[<a href="https://odysee.com">odysee</a>]</span>
-            </p>
-            <p class="lst">
-            <span style="color: var(--color2)">[<a href="https://www.heidelberger-volksbank.de/services_cloud/portal">volksbank</a>]</span>
-            <span style="color: var(--color1)">[<a href="https://app.n26.com/login">n26</a>]</span>
-            </p>
-        </div>
+      </div>
     </div>
+  </body>
 </html>
