--- a/startpage/index.html
+++ b/startpage/index.html
@@ -18,7 +18,7 @@
       <div class="maincard">
         <div class="content">
           <div class="image">
-            <img src="images/gif.gif" alt="No image" />
+            <img src="images/city.webp" alt="No image" />
           </div>
           <div id="links" class="links">
             <section>
