--- a/startpage/index.html
+++ b/startpage/index.html
@@ -1,60 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&amp;display=swap"
-      rel="stylesheet"
-    />
-    <title>Startpage</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <div class="bg"></div>
-      <div class="maincard">
-        <div class="content">
-          <div class="image">
-            <img src="images/city.webp" alt="No image" />
-          </div>
-          <div id="links" class="links">
-            <section>
-              <h3>Home</h3>
-              <ul>
-                <li><a href="https://tonisagrista.com">Homepage</a></li>
-                <li><a href="https://old.reddit.com">Reddit</a></li>
-                <li><a href="https://mastodon.social">Mastodon</a></li>
-                <li><a href="https://pixelfed.social/i/web">Pixelfed</a></li>
-                <li><a href="https://www.youtube.com/">Youtube</a></li>
-                <li><a href="https://twitter.com">Twitter</a></li>
-              </ul>
-            </section>
-            <section>
-              <h3>Gaia</h3>
-              <ul>
-                <li><a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky">Gaia Sky</a></li>
-                <li><a href="https://codeberg.org/gaiasky/gaiasky">Repo</a></li>
-                <li><a href="https://www.cosmos.esa.int/web/gaia/home">Cosmos</a></li>
-                <li><a href="https://s2e2.cosmos.esa.int/jira/">Jira</a></li>
-                <li><a href="https://wiki.cosmos.esa.int/gaia-dpac">Wiki</a></li>
-                <li><a href="https://gaia.ari.uni-heidelberg.de/gaiasky/docs">Docs</a></li>
-              </ul>
-            </section>
-            <section>
-              <h3>Fun</h3>
-              <ul>
-                <li><a href="https://ccma.cat/3cat">3cat</a></li>
-                <li><a href="https://tilvids.com">Tilvids</a></li>
-                <li><a href="https://yewtu.be">Invidious</a></li>
-                <li><a href="https://openstreetmap.org">OSM</a></li>
-              </ul>
-            </section>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&amp;display=swap" rel="stylesheet" />
+  <title>Startpage</title>
+</head>
+
+<body>
+  <div class="wrapper">
+    <div class="bg"></div>
+    <div class="maincard">
+      <div class="content">
+        <div class="image">
+          <img src="images/kame-house.webp" alt="No image" />
+        </div>
+        <div id="links" class="links">
+          <section>
+            <h3>Home</h3>
+            <ul>
+              <li><a href="https://tonisagrista.com">Homepage</a></li>
+              <li><a href="https://old.reddit.com">Reddit</a></li>
+              <li><a href="https://mastodon.social">Mastodon</a></li>
+              <li><a href="https://pixelfed.social/i/web">Pixelfed</a></li>
+              <li><a href="https://www.youtube.com/">Youtube</a></li>
+              <li><a href="https://twitter.com">Twitter</a></li>
+            </ul>
+          </section>
+          <section>
+            <h3>Gaia</h3>
+            <ul>
+              <li><a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky">Gaia Sky</a></li>
+              <li><a href="https://codeberg.org/gaiasky/gaiasky">Repo</a></li>
+              <li><a href="https://www.cosmos.esa.int/web/gaia/home">Cosmos</a></li>
+              <li><a href="https://s2e2.cosmos.esa.int/jira/">Jira</a></li>
+              <li><a href="https://wiki.cosmos.esa.int/gaia-dpac">Wiki</a></li>
+              <li><a href="https://gaia.ari.uni-heidelberg.de/gaiasky/docs">Docs</a></li>
+            </ul>
+          </section>
+          <section>
+            <h3>Fun</h3>
+            <ul>
+              <li><a href="https://ccma.cat/3cat">3cat</a></li>
+              <li><a href="https://tilvids.com">Tilvids</a></li>
+              <li><a href="https://yewtu.be">Invidious</a></li>
+              <li><a href="https://openstreetmap.org">OSM</a></li>
+            </ul>
+          </section>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
