--- a/startpage/index.html
+++ b/startpage/index.html
@@ -33,12 +33,12 @@
           <section>
             <h3>Gaia</h3>
             <ul>
-              <li><a href="https://zah.uni-heidelberg.de/gaia/outreach/gaiasky">Gaia Sky</a></li>
+              <li><a href="https://gaiasky.space">Gaia Sky</a></li>
               <li><a href="https://codeberg.org/gaiasky/gaiasky">Repo</a></li>
               <li><a href="https://www.cosmos.esa.int/web/gaia/home">Cosmos</a></li>
               <li><a href="https://s2e2.cosmos.esa.int/jira/">Jira</a></li>
               <li><a href="https://wiki.cosmos.esa.int/gaia-dpac">Wiki</a></li>
-              <li><a href="https://gaia.ari.uni-heidelberg.de/gaiasky/docs">Docs</a></li>
+              <li><a href="http://docs.gaiasky.space">Docs</a></li>
             </ul>
           </section>
           <section>
