feat: To new reddit.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -23,7 +23,7 @@
             <h3>Home</h3>
             <ul>
               <li><a href="https://tonisagrista.com">Homepage</a></li>
-              <li><a href="https://old.reddit.com">Reddit</a></li>
+              <li><a href="https://reddit.com">Reddit</a></li>
               <li><a href="https://mastodon.social">Mastodon</a></li>
               <li><a href="https://pixelfed.social/i/web">Pixelfed</a></li>
               <li><a href="https://www.youtube.com/">Youtube</a></li>
